# waybar-vd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  build.sh  hover-effects-summary.md  install.sh
examples/: config.json  material-design-style.css  minimal-style.css  style.css
src/: config.rs  errors.rs  hyprland.rs  lib.rs  metrics.rs  monitor.rs  vdesk.rs
src/ui/: mod.rs  widgets.rs
test/: style-debug.css  style.css  test.sh  waybar-config.json
