[package]
name = "waybar-virtual-desktops-cffi"
version = "0.1.0"
edition = "2021"
authors = ["Givani Boekestijn <givaniboek@hotmail.com>"]
description = "CFFI module for Waybar to display Hyprland virtual desktops"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Waybar CFFI interface
waybar-cffi = "0.1"

# JSON handling for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime for IPC handling
tokio = { version = "1.0", features = ["net", "rt", "rt-multi-thread", "macros", "sync", "time", "io-util"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation for jitter
fastrand = "2.0"

# Logging
log = "0.4"
env_logger = "0.10"

# String handling
once_cell = "1.19"

# Regular expressions for security validation
regex = "1.10"

[dev-dependencies]
# For integration tests
futures = "0.3"

[build-dependencies]
# For generating bindings if needed
bindgen = "0.69"

[profile.release]
# Optimize for size and performance
lto = true              # Link-time optimization for smaller binary
panic = "abort"         # Abort on panic (smaller than unwinding)
strip = true            # Automatically strip debug symbols
opt-level = "s"         # Optimize for size but maintain performance
